<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_server_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:touchscreenBlocksFocus="true"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_server_address"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/server_address"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/default_bt_bg"
            android:enabled="false"
            android:text="@string/bt_save"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_status"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_server_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connected"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/check_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/default_bt_bg"
            android:text="@string/refresh"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/retry_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_transparent"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/rounded_bg"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/settings_reopen"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_no"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/bt_later" />

                <Button
                    android:id="@+id/bt_yes"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_yes" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>