<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.ProductsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_products"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:listitem="@layout/rv_item_product" />

            <ProgressBar
                android:id="@+id/pb_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_transparent"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_item_image"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/product_image"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_background" />

                    <TextView
                        android:id="@+id/tv_item_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="example description for product item" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:id="@+id/error_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/error_image"
            android:text="@string/error_text"
            android:textAlignment="center"
            android:textSize="16sp"
            android:visibility="gone"
            app:drawableTopCompat="@drawable/img_error" />

    </RelativeLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>